--- a/style.css
+++ b/style.css
@@ -74,10 +74,11 @@
 .skills {
   position: absolute;
   top: 0;
-  width: 75%;
-  margin-left: 12.5vw;
+  width: 85%;
+  margin-left: 7.5vw;
   margin-top: 100px;
   text-align: center;
+  margin-bottom: 200px;
 }
 .skills h2 {
   font-size: 48px;
@@ -87,12 +88,12 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 50px;
 }
 
 .skills-glass {
-  width: 240px;
+  width: 20vw;
   height: 160px;
-  margin: 24px auto 0 auto;
   border-radius: 18px;
   background: rgba(255, 255, 255, 0.13);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
@@ -108,6 +109,18 @@
 .skills-glass:hover {
   box-shadow: 0 12px 32px 0 rgba(164, 80, 139, 0.18);
   background: rgba(255, 255, 255, 0.18);
+}
+
+.glass {
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border: 1.5px solid rgba(255, 255, 255, 0.22);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: box-shadow 0.2s, background 0.2s;
 }
 
 body {
