--- a/component/_intro.scss
+++ b/component/_intro.scss
@@ -51,3 +51,19 @@
   background: linear-gradient(90deg, #a4508b 0%, #46025f 100%);
   transform: translateY(-2px) scale(1.04);
 }
+
+@media (max-width: 720px) {
+  .intro .self {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
+@media (max-width: 540px) {
+  .intro .self {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+}
