--- a/component/_skills.scss
+++ b/component/_skills.scss
@@ -51,3 +51,25 @@
   justify-content: center;
   transition: box-shadow 0.2s, background 0.2s;
 }
+
+@media (max-width: 720px) {
+  .skills .cards {
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+  }
+  .skills-glass {
+    width: 50vw;
+  }
+}
+
+@media (max-width: 540px) {
+  .skills .cards {
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .skills-glass {
+    width: 50vw;
+  }
+}
