--- a/component/_nav_bar.scss
+++ b/component/_nav_bar.scss
@@ -3,3 +3,10 @@
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+
+.fix {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: inherit;
+}
