--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ body {
 .fix {
   display: flex;
   justify-content: space-around;
-  margin-top: 25px;
+  padding-top: 25px;
 
   nav {
     display: flex;
