--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .intro {
   width: 75%;
   margin: 0 auto;
-  margin-top: 75px;
+  margin-top: 150px;
   text-align: center;
 }
 .intro h1 {
@@ -85,7 +85,7 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 1000px;
+  width: 2000px;
   height: 400px;
   background: radial-gradient(ellipse at center, rgba(70, 2, 95, 0.8) 0%, rgba(255, 255, 255, 0) 80%);
   pointer-events: none;
@@ -95,11 +95,12 @@
 .skills {
   position: absolute;
   top: 0;
-  width: 85%;
-  margin-left: 7.5vw;
-  margin-top: 100px;
+  width: 75%;
+  margin-left: 12.5vw;
+  margin-top: 300px;
   text-align: center;
   margin-bottom: 200px;
+  z-index: 2;
 }
 .skills h2 {
   font-size: 48px;
@@ -113,7 +114,7 @@
 }
 
 .skills-glass {
-  width: 20vw;
+  width: 15vw;
   height: 160px;
   border-radius: 18px;
   background: rgba(255, 255, 255, 0.13);
@@ -122,8 +123,8 @@
   -webkit-backdrop-filter: blur(8px);
   border: 1.5px solid rgba(255, 255, 255, 0.22);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   transition: box-shadow 0.2s, background 0.2s;
 }
 
@@ -132,7 +133,17 @@
   background: rgba(255, 255, 255, 0.18);
 }
 
+.glass-column {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 20%;
+}
+
 .glass {
+  border-radius: 10px;
+  width: 45%;
+  height: 100%;
   background: rgba(255, 255, 255, 0.13);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
   backdrop-filter: blur(8px);
@@ -142,6 +153,11 @@
   align-items: center;
   justify-content: center;
   transition: box-shadow 0.2s, background 0.2s;
+}
+.glass img {
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
 }
 
 @media (max-width: 720px) {
