--- a/component/_skills.scss
+++ b/component/_skills.scss
@@ -1,9 +1,8 @@
 .skills {
-  position: absolute;
+  position: static;
   top: 0;
   width: 75%;
   margin-left: 12.5vw;
-  margin-top: 300px;
   text-align: center;
   margin-bottom: 200px;
   z-index: 2;
@@ -11,6 +10,7 @@
   h2 {
     font-size: 48px;
     color: white;
+    margin-top: 0;
   }
 
   .cards {
@@ -88,5 +88,11 @@
   }
   .skills-glass {
     width: 50vw;
+  }
+}
+
+@media (max-width: 1024px) {
+  .skills-glass {
+    width: 30vw;
   }
 }
