--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  background: inherit;
+  background: transparent;
 }
 
 .intro {
@@ -82,7 +82,7 @@
 }
 .elipse {
   position: relative;
-  bottom: 0;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
   width: 2000px;
@@ -93,11 +93,10 @@
 }
 
 .skills {
-  position: absolute;
+  position: static;
   top: 0;
   width: 75%;
   margin-left: 12.5vw;
-  margin-top: 300px;
   text-align: center;
   margin-bottom: 200px;
   z-index: 2;
@@ -105,6 +104,7 @@
 .skills h2 {
   font-size: 48px;
   color: white;
+  margin-top: 0;
 }
 .skills .cards {
   width: 100%;
@@ -180,6 +180,16 @@
     width: 50vw;
   }
 }
+@media (max-width: 1024px) {
+  .skills-glass {
+    width: 30vw;
+  }
+}
+.education {
+  width: 75vw;
+  margin: 0 auto;
+}
+
 body {
   background-color: #0A0A0A;
   font-family: "Old Standard TT", serif;
