--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 @import 'component/intro.scss';
 @import 'component/elipse';
 @import 'component/skills';
+@import 'component/education';
 body {
   background-color: #0A0A0A;
   font-family: "Old Standard TT", serif;
