--- a/component/_education.scss
+++ b/component/_education.scss
@@ -1,4 +1,13 @@
 .education {
+    position: relative;
     width: 75vw;
     margin: 0 auto;
+    text-align: center;
+    bottom: 150px;
+
+    h2 {
+        font-size: 48px;
+        color: white;
+        margin-top: 0;
+      }
 }
