--- a/component/_skills.scss
+++ b/component/_skills.scss
@@ -1,10 +1,9 @@
 .skills {
-  position: static;
-  top: 0;
+  position: relative;
+  top: -200px;
   width: 75%;
   margin-left: 12.5vw;
   text-align: center;
-  margin-bottom: 200px;
   z-index: 2;
 
   h2 {
@@ -69,6 +68,13 @@
   }
 }
 
+
+@media (max-width: 1024px) {
+  .skills-glass {
+    width: 30vw;
+  }
+}
+
 @media (max-width: 720px) {
   .skills .cards {
     flex-direction: column;
@@ -88,11 +94,5 @@
   }
   .skills-glass {
     width: 50vw;
-  }
-}
-
-@media (max-width: 1024px) {
-  .skills-glass {
-    width: 30vw;
   }
 }
