--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@
     gap: 32px;
   }
   .skills-glass {
-    width: 75vw;
+    width: 50vw;
   }
 }
 @media (max-width: 540px) {
@@ -187,7 +187,7 @@
     gap: 24px;
   }
   .skills-glass {
-    width: 50vw;
+    width: 75vw;
   }
 }
 .education {
@@ -236,8 +236,7 @@ body {
   background-color: #0A0A0A;
   font-family: "Old Standard TT", serif;
   color: #fcfcfc;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .fix {
