--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,7 @@ body {
   background-color: #0A0A0A;
   font-family: "Old Standard TT", serif;
   color: #fcfcfc;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 
