--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ html {
 
 body {
   width: 100vw;
-  background-color: #0A0A0A;
+  background: black;
   font-family: "Old Standard TT", serif;
   color: #fcfcfc;
   overflow: hidden;
@@ -55,7 +55,7 @@ body {
   .container {
     width: 700px;
   }
-  
+
 }
 
 @media (max-width: 720px) {
