--- a/component/_project.scss
+++ b/component/_project.scss
@@ -25,7 +25,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 60%;
-  height: 233vh;
+  height: 150vh;
 
 
   .glass {
@@ -35,15 +35,12 @@
 
     img {
       border-radius: 20px;
-
-      :hover {
-        transform: rotate(-30deg);
-      }
     }
   }
 }
 
 #handmade {
+  text-align: center;
   img {
     position: absolute;
     width: 50%;
@@ -51,11 +48,24 @@
     top: 200px;
     border-radius: 20px;
     box-shadow: 0px 0px 13px 5px rgba(255, 255, 255, 0.4);
+
+    :hover {
+      transform: rotate(-30deg);
+    }
+  }
+
+  h3 {
+    position: absolute;
+    top: 12.5%;
+    font-size: 20px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: normal;
+    text-shadow: 0px 0px 13px rgba(255, 255, 255, 0.4);
   }
 }
 
 .project-description {
-  position: sticky;
+  padding-top: 7vh;
   top: 0;
   width: 35%;
   height: 70vh;
@@ -68,5 +78,25 @@
 }
 
 #handmade {
-  background: rgba(2, 20, 86, 0.456);
+  background: #0F1342;
+}
+
+#carbnb {
+  background: #4B122A;
+}
+
+.handmade-description {
+  h3 {
+    font-size: 24px;
+    margin-top: 0;
+    color: #5409DA;
+  }
+}
+
+.carbnb-description {
+  h3 {
+    font-size: 24px;
+    margin-top: 0;
+    color: rgb(206, 232, 10);
+  }
 }
