--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,7 @@
 @import 'component/education';
 @import 'component/scroll';
 @import 'component/project';
-
+@import 'component/contact';
 
 
 body {
