--- a/component/_elipse.scss
+++ b/component/_elipse.scss
@@ -6,5 +6,6 @@
   height: 400px;
   background: radial-gradient(ellipse at center, rgba(70, 2, 95, 0.8) 0%, rgba(255, 255, 255, 0) 80%);
   pointer-events: none;
-  z-index: 1;
+  z-index: -1;
+  bottom: 50vh;
 }
