--- a/style.scss
+++ b/style.scss
@@ -3,12 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Niconne&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Niconne&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Lavishly+Yours&family=Monsieur+La+Doulaise&family=Niconne&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import 'component/utilities';
 @import 'component/nav_bar';
 @import 'component/intro.scss';
 @import 'component/elipse';
 @import 'component/skills';
 @import 'component/education';
-@import 'component/scroll';
 @import 'component/project';
 @import 'component/contact';
 
@@ -47,6 +47,7 @@ body {
 .relative {
   position: relative;
   width: 100%;
+  margin-top: 20vh;
 }
 
 @media (max-width: 960px) {
@@ -93,4 +94,8 @@ body {
 body {
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+#planet {
+  border: 1px solid white;
 }
