--- a/component/_project.scss
+++ b/component/_project.scss
@@ -44,13 +44,14 @@
 }
 
 #handmade {
+  display: inline;
   text-align: center;
   background: #0F1342;
   img {
     position: relative;
     width: 50%;
     height: auto;
-    top: 300px;
+    top: 10vh;
     border-radius: 20px;
     box-shadow: 0px 0px 13px 5px rgba(255, 255, 255, 0.4);
 
@@ -61,26 +62,35 @@
 
   h3 {
     position: relative;
-    align-self: center;
     font-size: 1.25rem;
     font-family: "Open Sans", sans-serif;
     font-weight: normal;
     text-shadow: 0px 0px 13px rgba(255, 255, 255, 0.4);
+    top: 2vw;
   }
 }
 
 #carbnb {
   background: #4B122A;
-  display: flex;
+  display: inline;
+  text-align: center;
 
   img {
-    align-items: flex-end;
-    position: absolute;
-    width: 90%;
+    position: relative;
+    width: 85%;
     height: auto;
-    top: 30vh;
+    top: 10vw;
     border-radius: 20px;
     box-shadow: 0px 0px 13px 5px rgba(255, 255, 255, 0.4);
+  }
+
+  h3 {
+    position: relative;
+    font-size: 1.25rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: normal;
+    text-shadow: 0px 0px 13px rgba(255, 255, 255, 0.4);
+    top: 2vw;
   }
   
 }
@@ -88,12 +98,18 @@
   padding-top: 7vh;
   top: 0;
   width: 35%;
-  height: 70vh;
+  height: proportion(45vw, 0.75);
   overflow-wrap: break-word;
   text-align: start;
 
   h3 {
     margin-top: 0;
+    font-family: "Open Sans", sans-serif;
+  }
+
+  p {
+    font-size: 0.9rem;
+    font-family: "Open Sans", sans-serif;
   }
 }
 
