--- a/component/_intro.scss
+++ b/component/_intro.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Monsieur+La+Doulaise&family=Niconne&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 #smooth-content {
+  position: relative;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
