--- a/component/_project.scss
+++ b/component/_project.scss
@@ -36,6 +36,7 @@
     height: proportion(45vw, 0.75);
     overflow: hidden;
     border-radius: 20px;
+    
 
     img {
       border-radius: 20px;
@@ -55,9 +56,6 @@
     border-radius: 20px;
     box-shadow: 0px 0px 13px 5px rgba(255, 255, 255, 0.4);
 
-    :hover {
-      transform: rotate(-30deg);
-    }
   }
 
   h3 {
@@ -128,7 +126,7 @@
   h3 {
     font-size: 1.5rem;
     margin-top: 0;
-    color: rgb(206, 232, 10);
+    color: #4B122A;
   }
 }
 
@@ -136,7 +134,7 @@
   position: fixed;
   width: 90px;
   height: 90px;
-  background: radial-gradient(circle, #fff 40%, #aaa);
+  background: rgba(255,255,255,0.4);
   border-radius: 50%;
   pointer-events: none;
   display: flex;
@@ -145,7 +143,8 @@
   justify-content: center;
   font-weight: bold;
   font-size: 12px;
-  color: #111;
+  color: black;
+  font-weight: bolder;
   z-index: 9999;
   opacity: 0;
   transform: translate(-50%, -50%);
